--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";  
+
+.header{
+    background-color: #05386B;
+    .navbar-brand, .nav-link{
+        color: aliceblue;
+    }
+}
