--- a/src/app/forecast/forecast.component.scss
+++ b/src/app/forecast/forecast.component.scss
@@ -1,36 +1,38 @@
-.bg-light{
-    color: black;
-}
 .temp:hover, .active {
     color: #fff;
     background-color: #F68D2E;
 }
-
+.loading{
+    top: 0;
+    left: 0;
+    position: absolute;
+    transform: translate(50vw, 50vh);
+}
 .card{
     border: none;
-    box-shadow: 2px 2px 10px rgb(14 84 141);
+}
+
+.card.current{
+    margin-top: 20%;
+}
+
+.forecast{
+    height: calc(100vh - 100px);
+    padding: 0px;
 }
 
 .forecast-table{
     // background: rgb(14,84,141,0.8);
-    height: calc(100vh - 200px);
-
-    th{
+    height: 100%;
+    background-color: #e7e7e74b;
+    thead{
         background-color: rgba(9, 61, 104, 0.8);
-        // border: 1px solid rgb(14,84,141,0.9);
     }
     td{
         vertical-align: middle;
+        border: 5px solid transparent;
     }
     td.date{
         background-color: #e7e7e74b;
-        border:1px solid none;
-        // border: 1px solid rgb(14,84,141,0.9);
-    }
-    td.temp{
-        background-color: #e7e7e74b;
-        // border: 5px solid rgb(14,84,141,0.9);
-        border: 5px solid none;
-
     }
 }
